# QueryPilotAI

./: .gitignore  README.md  main.py  pyproject.toml  sample_inputs.txt  schema_Adventureworks_DB.sql  test_query_result.sql
app/: __init__.py  api.py  config.py  db.py  models.py  schema_loader.py  sql_builder.py  sql_revisor.py  sql_validator.py
notebooks/: M1_basic_langgraph.ipynb
