[project]
name = "ai-query-agent"
version = "0.1.0"
description = "Agentic natural-language-to-SQL service with deterministic SQL guardrails"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "openai>=1.90.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.41",
    "sqlglot>=26.30.0",
    "uvicorn[standard]>=0.34.0",
]
